2008-05-07  Noel O'Boyle <baoilleach@gmail.com>

	* scripts/python/pybel.py: Synch with cinfony.

2008-05-06  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/forcefield.cpp: initialize static _constraints to a
	OBFFConstraints object.

2008-05-06  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/parsmarts.cpp: Add if(_pat) before _pat->...(). This was causing
	Avogadro to crash here sometimes.

2008-05-05  Daniel Leidert <daniel.leidert@wgdd.de>

	* autogen.sh: Force aclocal and autoheader to regenerate files to
	avoid timestamp issues (probably not necessary for automake and
	autoconf).

	* include/openbabel/Makefile.am: babelconfig.h is not removed
	automatically. Added it to DISTCLEANFILES.

2008-05-05  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/mol.cpp: Ensure energy is always 0.0.

	* src/formats/gaussformat.cpp: Prevent crash with incorrect partial charges.

	* include/openbabel/base.h, include/openbabel/generic.h: New class
	for 3x3 matrix data (e.g., quadrupole moments).

	* src/formats/adfformat.cpp, src/formats/t41data.h: Initial import
	of Molekel Tape41 support for ADF.

2005-05-04  Marcus D. Hanwell  <marcus@cryos.org>

	* configure.in, src/config.h.in, include/openbabel/forcefield.h: Fixed
	the babelconfig.h file - typo spotted...

2008-05-04  Noel O'Boyle <baoilleach@gmail.com>

	* windows-vc2005/OBPythonOBF/setup.py: Minor changes to install the
	correct OBFs in the Python Windows install.

2008-05-04  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* include/openbabel/forcefield.h, src/forcefield.cpp: Make
	OBForceField::_constraints static.

2008-05-04  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* include/openbabel/forcefield.h: Add virtual destructors to
	OBFFCalculation2-4.

2005-05-03  Marcus D. Hanwell  <marcus@cryos.org>

	* src/config.h.cmake: Fixed so that TIME_WITH_SYS_TIME is defined.

2008-05-04  Tim Vandermeersch <tim.vandermeersch@gmail.com>
	